--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <li id="value-of-weather">Sunny</li>
             </ul>
           </div>
+          <a href="https://github.com/AnastasiiaKotsiuba/WeatherApp.git"></a>
         </div>
       </div>
     </div>
