--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
               <li id="value-of-weather">Sunny</li>
             </ul>
           </div>
-          <a href="https://github.com/AnastasiiaKotsiuba/WeatherApp.git"></a>
+          <a href="https://github.com/AnastasiiaKotsiuba/WeatherApp.git"
+            >Link in my GitHub repository</a
+          >
         </div>
       </div>
     </div>
