Add a current weather icon

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
           </div>
         </form>
         <div class="row">
-          <div class="col-4">
+          <div class="col-5">
             <div class="weather-date">
               <img
-                src="images/sun.svg"
+                src="http://openweathermap.org/img/wn/04d@2x.png"
                 alt="sun"
+                id="weather-icon"
                 class="sun-icon"
-                width="48px"
               />
               <div>
                 <p class="all-temp" id="value-of-temp">23</p>
@@ -74,7 +74,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4 weather-about">
+          <div class="col-3 weather-about">
             <ul>
               <li class="data">
                 Pressure : <span id="value-of-pressure">488</span>
