--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
             </ul>
           </div>
         </div>
-        <a href="https://github.com/AnastasiiaKotsiuba/WeatherApp.git"
-          >Link in my GitHub repository</a
-        >
       </div>
+      <a
+        href="https://github.com/AnastasiiaKotsiuba/WeatherApp.git"
+        class="linkGit"
+        >Link in my GitHub repository</a
+      >
     </div>
     <script src="src/project.js"></script>
   </body>
