create tamplate for forecast

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="weather-date">
               <img
                 src="http://openweathermap.org/img/wn/04d@2x.png"
-                alt="sun"
+                alt="cloudy"
                 id="weather-icon"
                 class="sun-icon"
               />
@@ -93,6 +93,7 @@
             </ul>
           </div>
         </div>
+        <div class="forecast" id="template-forecast"></div>
       </div>
       <a
         href="https://github.com/AnastasiiaKotsiuba/WeatherApp.git"
